styles/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --interface-text-default: #e0e3e9;
  --Interface-Text-title: #f2f2f5;
  --interface-text-default: #E0E3E9;
  --Interface-Text-title: #F2F2F5;
  --Interface-Text-title1: #19212A;
  --Interface-Text-subtitle: #9EA3AA;
  --Brand-Neutral-50: #263040;
  --Interface-Stroke-soft: #1f2a37;
  --interface-text-default1: #3c4146;
  --interface-text-default2: #2C363F;
  --Interface-Text-title1: #212325;
  --Interface-feedback-error-700: #d42600;
  --Interface-Stroke-default: #c9d3db;
  --Brand-Primary-900: #4a4167;
  --Interface-Text-subtitle: #7f8488;
  --Interface-Surface-hc-primary: #645592;
  --Interface-Surface-component: #fff;
  --Interface-Surface-component1: #141314;
  --Brand-Neutral-900: #42536D;
  --Brand-Primary-800: #067532;
  --Brand-Primary-pure: #00953A;
}

@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-interfacetextdefault: var(--interface-text-default);
  --color-InterfaceTexttitle: var(--Interface-Text-title);
  --color-BrandNeutral50: var(--Brand-Neutral-50);
  --color-InterfaceStrokesoft: var(--Interface-Stroke-soft);
  --color-InterfaceTexttitle :var(--Interface-Text-title);
  --color-InterfaceTexttitle1 :var(--Interface-Text-title1);
  --color-InterfaceTextsubtitle :var(--Interface-Text-subtitle);
  --color-BrandNeutral50 :var(--Brand-Neutral-50);
  --color-InterfaceStrokesoft :var(--Interface-Stroke-soft);
  --color-interfacetextdefault2: var(--interface-text-default2);
  --color-InterfaceTexttitle1: var(--Interface-Text-title1);
  --color-Interfacefeedbackerror700: var(--Interface-feedback-error-700);
  --color-InterfaceStrokedefault: var(--Interface-Stroke-default);
  --color-BrandPrimary900: var(--Brand-Primary-900);
  --color-InterfaceTextsubtitle: var(--Interface-Text-subtitle);
  --color-InterfaceSurfacehcprimary: var(--Interface-Surface-hc-primary);
  --color-InterfaceSurfacecomponent: var(--Interface-Surface-component);
  --color-InterfaceSurfacecomponent1: var(--Interface-Surface-component1);
  --color-BrandNeutral900: var(--Brand-Neutral-900);
   --color-BrandPrimary800: var(--Brand-Primary-800);
   --color-BrandPrimarypure: var(--Brand-Primary-pure);




  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);

  /* ✅ ADD YOUR BREAKPOINTS HERE */
  --breakpoint-xs: 575px;
  --breakpoint-sm: 640px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1280px;
  --breakpoint-1366xl: 1366px;
  --breakpoint-1440xl: 1440px;
  --breakpoint-2xl: 1536px;
  --breakpoint-3xl: 1900px; /* 👉 THIS IS WHAT YOU NEED */
}
@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
}

@font-face {
  font-family: "redington";
  src: url("/fonts/redington.eot?5kxb3k");
  src: url("/fonts/redington.eot?5kxb3k#iefix") format("embedded-opentype"),
    url("/fonts/redington.ttf?5kxb3k") format("truetype"),
    url("/fonts/redington.woff?5kxb3k") format("woff"),
    url("/fonts/redington.svg?5kxb3k#redington") format("svg");
  font-weight: normal;
  font-style: normal;
  font-display: block;
}

[class^="smb-"],
[class*=" smb-"] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: "redington" !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.smb-doc-download:before {
  content: "\e936";
}
.smb-search-status:before {
  content: "\e935";
}
.smb-folder:before {
  content: "\e901";
}
.smb-ticket1:before {
  content: "\e934";
}
.smb-arrow-right:before {
  content: "\e929";
}
.smb-doc-upload:before {
  content: "\e92a";
}
.smb-export:before {
  content: "\e92b";
}
.smb-flash:before {
  content: "\e92c";
}
.smb-grid:before {
  content: "\e92d";
}
.smb-info-circle:before {
  content: "\e92e";
}
.smb-lamp-on:before {
  content: "\e92f";
}
.smb-refresh:before {
  content: "\e930";
}
.smb-shield-tick:before {
  content: "\e931";
}
.smb-time-start:before {
  content: "\e932";
}
.smb-verify:before {
  content: "\e933";
}
.smb-arrow-down:before {
  content: "\e903";
}
.smb-arrowup:before {
  content: "\e904";
}
.smb-audio:before {
  content: "\e905";
}
.smb-book:before {
  content: "\e906";
}
.smb-calendar:before {
  content: "\e907";
}
.smb-call:before {
  content: "\e908";
}
.smb-check-circle:before {
  content: "\e909";
}
.smb-circle-close:before {
  content: "\e90a";
}
.smb-circle-square:before {
  content: "\e90b";
}
.smb-danger:before {
  content: "\e90c";
};
.smb-edit:before {
  content: "\e913";
}
.smb-edu:before {
  content: "\e914";
}
.smb-filter:before {
  content: "\e917";
}
.smb-flash-light:before {
  content: "\e918";
}
.smb-global:before {
  content: "\e91a";
}
.smb-key-square:before {
  content: "\e91b";
}
.smb-location:before {
  content: "\e91c";
}
.smb-menu:before {
  content: "\e91d";
}
.smb-more:before {
  content: "\e91e";
}
.smb-oct-user:before {
  content: "\e91f";
}
.smb-pdf:before {
  content: "\e920";
}
.smb-search:before {
  content: "\e921";
}
.smb-setting:before {
  content: "\e922";
}
.smb-simple-search:before {
  content: "\e923";
}
.smb-slash:before {
  content: "\e924";
}
.smb-sms:before {
  content: "\e925";
}
.smb-square-more:before {
  content: "\e926";
};
.smb-watch:before {
  content: "\e902";
}
.smb-logout:before {
  content: "\e900";
}



/* Global font size */

.font10 {
  @apply text-[8px] lg:text-[8px] xl:text-[10px] 2xl:text-[10px] 3xl:text-[0.521vw];
}
.font12 {
  @apply text-[11px] sm:text-[11px] md:text-[12px] lg:text-[12px] xl:text-[12px] 2xl:text-[12px] 3xl:text-[0.625vw];
}
.font14 {
  @apply text-[13px] lg:text-[13px] xl:text-[13px] 2xl:text-[14px] 3xl:text-[0.729vw];
}
.font16 {
  @apply text-[14px] lg:text-[14px] xl:text-[15px] 2xl:text-[16px] 3xl:text-[0.833vw];
}
.font18 {
  @apply text-[15px] lg:text-[15px] xl:text-[16px] 2xl:text-[18px] 3xl:text-[0.938vw];
}
.font20 {
  @apply text-[16px] lg:text-[16px] xl:text-[18px] 2xl:text-[20px] 3xl:text-[1.042vw];
}
.font24 {
  @apply text-[20px] lg:text-[20px] xl:text-[22px] 2xl:text-[24px] 3xl:text-[1.25vw];
}
.font26 {
  @apply text-[22px] lg:text-[22px] xl:text-[24px] 2xl:text-[26px] 3xl:text-[1.354vw];
}
.font32 {
  @apply text-[24px] lg:text-[28px] xl:text-[30px] 2xl:text-[32px] 3xl:text-[1.667vw];
}
.font36 {
  @apply text-[20px] lg:text-[24px] xl:text-[32px] 2xl:text-[36px] 3xl:text-[1.875vw];
}

/* Global spacing  */
.spacey12 {
  @apply space-y-[12px] xl:space-y-[12px] 3xl:space-y-[0.625vw];
}
.spacey20 {
  @apply space-y-[18px] lg:space-y-[18px] xl:space-y-[18px] 2xl:space-y-[20px] 3xl:space-y-[1.042vw];
}
.spacey30 {
  @apply space-y-[30px] lg:space-y-[30px] xl:space-y-[30px] 3xl:space-y-[1.563vw];
}
/* Global spacing  */

/* Global Padding */
.py8 {
  @apply py-[8px] lg:py-[8px] xl:py-[8px] 3xl:py-[0.417vw];
}
.py6 {
  @apply py-[6px] lg:py-[6px] xl:py-[6px] 3xl:py-[0.313vw];
}
.py10 {
  @apply py-[8px] lg:py-[8px] xl:py-[8px] 2xl:py-[10px] 3xl:py-[0.521vw];
}
.py20 {
  @apply py-[18px] lg:py-[18px] xl:py-[18px] 2xl:py-[20px] 3xl:py-[1.042vw];
}
.py24 {
  @apply py-[20px] lg:py-[22px] xl:py-[24px] 2xl:py-[24px] 3xl:py-[1.25vw];
}
.px24 {
  @apply py-[12px] lg:py-[16px] xl:py-[24px] 2xl:py-[24px] 3xl:py-[1.25vw];
}
.pb6 {
  @apply pb-[6px] xl:pb-[6px] 3xl:pb-[0.313vw];
}
.px100 {
  @apply px-[80px] lg:px-[80px] xl:px-[80px] 2xl:px-[90px] 3xl:px-[5.208vw];
}
.py50 {
  @apply py-[40px] lg:py-[40px] xl:py-[50px] 2xl:py-[50px] 3xl:py-[2.604vw];
}
.py120 {
  @apply py-[70px] lg:py-[70px] xl:py-[90px] 2xl:py-[120px] 3xl:py-[6.25vw];
}
.px14 {
  @apply px-[12px] lg:px-[14px] xl:px-[14px] 2xl:px-[14px] 3xl:px-[0.729vw];
}

/* Global Padding End */

/* Global width */
.w18 {
  @apply w-[15px] lg:w-[16px] xl:w-[18px] 2xl:w-[18px] 3xl:w-[0.938vw];
}
/* Global width End */
/* Global Gap */
.gap20 {
  @apply gap-[20px] xl:gap-[20px] 2xl:gap-[20px] 3xl:gap-[1.042vw];
}
.gap40 {
  @apply gap-[30px] xl:gap-[40px] 2xl:gap-[40px] 3xl:gap-[2.083vw];
}
/* Global Gap */

/* Global  Margin */
.mx40 {
  @apply mx-[40px] xl:mx-[40px] 3xl:mx-[2.083vw];
}
.mx60 {
  @apply mx-[40px] lg:mx-[40px] xl:mx-[50px] 2xl:mx-[60px] 3xl:mx-[3.125vw];
}
.mt40 {
  @apply mt-[40px] xl:mt-[40px] 2xl:mt-[40px] 3xl:mt-[2.083vw];
}
.mt24 {
  @apply mt-[18px] lg:mt-[20px] xl:mt-[22px] 2xl:mt-[24px] 3xl:mt-[1.25vw];
}
.my24 {
  @apply my-[18px] lg:my-[20px] xl:my-[20px] 2xl:my-[24px] 3xl:my-[1.25vw];
}
.mr120 {
  @apply mr-[40px] lg:mr-[40px] xl:mr-[90px] 2xl:mr-[120px] 3xl:mr-[6.25vw];
}
.mb30 {
  @apply mb-[22px] lg:mb-[25px] xl:mb-[25px] 2xl:mb-[30px] 3xl:mb-[1.563vw];
}
.mt10 {
  @apply mt-[8px] lg:mt-[9px] xl:mt-[10px] 2xl:mt-[10px] 3xl:mt-[0.521vw];
}

/* Global  Margin */

/* Rounded  Start*/
.rounded8 {
  @apply rounded-[8px] lg:rounded-[8px] xl:rounded-[8px] 3xl:rounded-[0.417vw];
}

/* Rounded  End*/

@keyframes slideInFromLeft {
  0% {
    transform: translateX(-100%); /* Start off-screen to the left */
  }
  60% {
    transform: translateX(30px); /* Bounce to the right */
  }
  80% {
    transform: translateX(-10px); /* Slight back movement */
  }
  100% {
    transform: translateX(0); /* End up at normal position */
  }
}

.popup-enter {
  animation: slideInFromLeft 0.5s ease-out; /* Apply the animation */
}
.custom-scroll {
  scrollbar-width: thin;
  scrollbar-color: #645592 #e5e7eb;
}

.custom-scroll::-webkit-scrollbar {
  width: 8px;
}

.custom-scroll::-webkit-scrollbar-track {
  background: #e5e7eb;
  border-radius: 10px;
}

.custom-scroll::-webkit-scrollbar-thumb {
  background-color: #645592;
  border-radius: 10px;
}
.hide-scrollbar {
  overflow-y: auto; /* scrolling enabled */
  -ms-overflow-style: none; /* hide scrollbar in IE/Edge */
  scrollbar-width: none; /* hide scrollbar in Firefox */
  scroll-behavior: smooth; /* smooth scrolling */
}

.hide-scrollbar::-webkit-scrollbar {
  display: none; /* hide scrollbar in Chrome/Safari */
}
/* card wrapper */
.sector-card {
  @apply rounded-2xl bg-white/90 shadow-sm p-4 flex flex-col justify-between h-53 transition-transform hover:-translate-y-[2px];
}

/* subtitle */
.sector-subtitle {
  @apply uppercase text-[8px] lg:text-[8px] xl:text-[10px] 2xl:text-[10px] 3xl:text-[0.521vw] font-medium tracking-[-0.02em] text-[#6B7280];
}

/* title */
.sector-title {
  @apply mt-2 text-[15px] lg:text-[15px] xl:text-[16px] 2xl:text-[18px] 3xl:text-[0.938vw] font-semibold leading-[24px] text-[#1E293B];
}

/* description */
.sector-description {
  @apply mt-2 text-[11px] sm:text-[11px] md:text-[12px] lg:text-[12px] xl:text-[12px] 2xl:text-[12px] 3xl:text-[0.625vw] leading-[18px] text-[#475569];
}
.sector-card {
  transition: all 0.2s ease;
}

.sector-card:hover {
  box-shadow: 0 4px 20px #bab0d9; /* soft neutral shadow */
  transform: translateY(-2px);
}
.responsive-grid {
  @apply grid gap-4 grid-cols-[repeat(2,minmax(0,1fr))];
}
.advertising-card {
  @apply rounded-2xl bg-white/90 shadow-sm p-4 flex flex-col justify-between h-70 transition-transform hover:-translate-y-[2px];
}
@media (min-width: 1400px) {
  .responsive-grid {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (min-width: 1800px) {
  .responsive-grid {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

@media (min-width: 2200px) {
  .responsive-grid {
    grid-template-columns: repeat(5, minmax(0, 1fr));
  }
}

